@@ -1231,6 +1231,21 @@ may be started if none by that name exists."
                            (elim-daemon-call 'message nil arglist))
         (error "No such account: %S" account)) ))
 
+(defun elim-toggle-user-blocked (process buddy &optional account)
+  (let (acct-data buddy-data auid buid call arglist)
+    (setq acct-data  (elim-account-data process account)
+          auid       (car acct-data)
+          buddy-data (elim-buddy-data process buddy auid)
+          auid       (elim-avalue "account-uid" (cdr buddy-data))
+          buid       (car buddy-data)
+          arglist    (cond (buid (list "bnode-uid"   buid))
+                           (auid (list "account-uid" auid "user-name" buddy)))
+          arglist    (elim-simple-list-to-proto-alist arglist)
+          call       (elim-daemon-call 'buddy-privacy nil arglist))
+    ;;(elim-debug "args: %S %S" acct-data buddy-data)
+    ;;(elim-debug "%S" call)
+    (elim-process-send process call) ))
+
 (defun elim-buddy-info (process account buddy)
   (let (acct-data buddy-data auid buid call arglist)
     (setq acct-data  (elim-account-data process account))
